# reason-melange-todo-app

./: .gitignore  README.md  bsconfig.json  build.dev.mjs  build.mjs  build.prod.mjs  docker-compose.yml  esy.json  package-lock.json  package.json  webpack.config.js
client/: AddTodo.re  AddTodoModal.re  App.re  TodoListItem.re  TodoService.re  TodoStore.re  client.re
common/: TodoItem.re  TodoItemCollection.re  common.re  dune
db/migrate/up/: 20220527T115509Z_todo.sql
esy.lock/: index.json
public/: index.css  index.html
server/: dune  migrate.re  server.re
server/api/: dune  handlers.re  todo.re
server/controllers/: dune  hello_world.re  todo.re
server/db/: db.re  dune
server/domain/: dune  todo.re
server/route/: dune  methods.re  parameters.re  responses.re  route_builder.re  utils.re
styled-ppx-ocaml-4.14/: package.json  postinstall.js
