(executable
 (name server)
 (modules server)
 (libraries common opium logs lwt api db)
 (preprocess
  (pps lwt_ppx ppx_yojson)))

(executable
 (name migrate)
 (modules migrate)
 (libraries cmdliner core_unix core_unix.sys_unix caqti-lwt ppx_rapper ppx_rapper_lwt ptime.clock.os caqti caqti-driver-postgresql)
 (preprocess
  (pps lwt_ppx ppx_rapper)))
